# health-tracker-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  fly.toml  migrate_columns.py  pyproject.toml  requirements.txt
bot/: __init__.py  handlers.py  main.py  messages.py  points.py  scheduler.py  sheets.py
docs/: BASE.md  GOOGLE_SHEETS_FORMULAS.md  PLAN.md
